--- a/applets/threejs/parametric-surfaces-gallery/pinecone.html
+++ b/applets/threejs/parametric-surfaces-gallery/pinecone.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parametric surface - Pinecone</title>
+  <title>Apple Surface</title>
   <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
   <canvas class="webgl"></canvas>
-  <script src="https://cdn.jsdelivr.net/npm/lil-gui@0.18"></script>
-  <!-- using three.js -->
   <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"
     crossorigin="anonymous"></script>
   <script type="importmap">
@@ -21,136 +17,7 @@
       "three/addons/": "https://unpkg.com/three@0.174.0/examples/jsm/"
     }
   }
-</script>
-  <script type="module">
-
-    import * as THREE from 'three';
-    import { OrbitControls } from "three/addons/controls/OrbitControls.js";
-    import { ParametricGeometry } from 'three/addons/geometries/ParametricGeometry.js';
-    import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
-
-    // GUI setup
-    const gui = new GUI();
-    const options = {
-      material: 'Matcap', // Default material
-      wireframe: false,    // Default wireframe state
-      h: 1,
-    };
-
-    /**
-     * Base
-     */
-    const canvas = document.querySelector('canvas.webgl');
-    const scene = new THREE.Scene();
-
-    // **Pinecone Surface**
-    function parametricFunc(u, v, target) {
-      u = u * Math.PI * 1;
-      v = v * Math.PI * 17;
-
-      let s = (Math.PI / 2) * Math.exp(-v / (8 * Math.PI));
-      let factor = 1 - 0.5 * ((5 / 4) * Math.pow(1 - ((3.6 * v) % (2 * Math.PI)) / Math.PI, 2) - 0.25) ** 2;
-
-      let h = 1.95653 * u ** 2 * (1.27689 * u - 1) ** 2 * Math.sin(s);
-      let r = factor * (u * Math.sin(s) + h * Math.cos(s));
-
-      let x = r * Math.sin(v);
-      let y = r * Math.cos(v);
-      let z = factor * (u * Math.cos(s) - h * Math.sin(s)) + 65;
-
-      target.set(x, y, z);
-    }
-
-
-    let geometry = new ParametricGeometry(parametricFunc, 25, 400);
-    geometry.rotateX(Math.PI / 1.9);
-    geometry.scale(0.012, 0.012, 0.012);
-
-    // Load MatCap texture
-    const textureLoader = new THREE.TextureLoader();
-    const matcapTexture = textureLoader.load('static/textures/matcaps/3.png');
-
-    // Define materials
-    const matcapMaterial = new THREE.MeshMatcapMaterial({ matcap: matcapTexture, side: THREE.DoubleSide });
-    const normalMaterial = new THREE.MeshNormalMaterial({ side: THREE.DoubleSide });
-
-    let mesh = new THREE.Mesh(geometry, matcapMaterial);
-    scene.add(mesh);
-
-    /**
-     * Sizes
-     */
-    const sizes = {
-      width: window.innerWidth,
-      height: window.innerHeight
-    };
-
-    window.addEventListener('resize', () => {
-      sizes.width = window.innerWidth;
-      sizes.height = window.innerHeight;
-      camera.aspect = sizes.width / sizes.height;
-      camera.updateProjectionMatrix();
-      renderer.setSize(sizes.width, sizes.height);
-      renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
-    });
-
-    /**
-     * Camera
-     */
-    const camera = new THREE.PerspectiveCamera(75, sizes.width / sizes.height, 0.1, 100);
-    camera.position.set(1, 1, 3);
-    scene.add(camera);
-
-    // Controls
-    const controls = new OrbitControls(camera, canvas);
-    controls.enableDamping = true;
-    controls.autoRotate = true;
-    controls.autoRotateSpeed = - 0.2;
-
-    // Add material toggle dropdown
-    gui.add(options, 'material', ['Matcap', 'Normal']).name('Style').onChange((value) => {
-      mesh.material = value === 'Matcap' ? matcapMaterial : normalMaterial;
-      mesh.material.wireframe = options.wireframe; // Keep wireframe state
-    });
-
-    // Add wireframe toggle
-    gui.add(options, 'wireframe').name('Frame').onChange((value) => {
-      mesh.material.wireframe = value;
-    });
-
-    // Add parameter
-    // gui.add(options, 'h', 0, 3, 0.01).onChange(() => {
-    //   // Regenerate geometry with the new 'a' value
-    //   geometry.dispose(); // Dispose of the old geometry to free up memory
-    //   geometry = new ParametricGeometry(parametricFunc, 100, 60);
-    //   geometry.rotateX(-Math.PI / 4);
-    //   geometry.scale(0.12, 0.12, 0.12);
-
-    //   // Update the mesh with the new geometry
-    //   mesh.geometry = geometry;
-    // });
-
-    gui.close();
-
-    /**
-     * Renderer
-     */
-    const renderer = new THREE.WebGLRenderer({ canvas: canvas, antialias: true });
-    renderer.setSize(sizes.width, sizes.height);
-    renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
-
-    /**
-     * Animate
-     */
-    const tick = () => {
-      controls.update();
-      renderer.render(scene, camera);
-      window.requestAnimationFrame(tick);
-    };
-
-    tick();
-
   </script>
+  <script type="module" src="./js/pineconeMain.js"></script>
 </body>
-
 </html>
