--- a/applets/threejs/parametric-surfaces-gallery/seashell.html
+++ b/applets/threejs/parametric-surfaces-gallery/seashell.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parametric Surface - Seashell</title>
+  <title>Apple Surface</title>
   <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
   <canvas class="webgl"></canvas>
-  <script src="https://cdn.jsdelivr.net/npm/lil-gui@0.18"></script>
-  <!-- using three.js -->
   <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"
     crossorigin="anonymous"></script>
   <script type="importmap">
@@ -21,130 +17,7 @@
       "three/addons/": "https://unpkg.com/three@0.174.0/examples/jsm/"
     }
   }
-</script>
-  <script type="module">
-
-    import * as THREE from 'three';
-    import { OrbitControls } from "three/addons/controls/OrbitControls.js";
-    import { ParametricGeometry } from 'three/addons/geometries/ParametricGeometry.js';
-    import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
-
-    // GUI setup
-    const gui = new GUI();
-    const options = {
-      material: 'Matcap', // Default material
-      wireframe: false,    // Default wireframe state
-      a: 13,
-    };
-
-    /**
-     * Base
-     */
-    const canvas = document.querySelector('canvas.webgl');
-    const scene = new THREE.Scene();
-
-    // **Sea Shell Surface**
-    function parametricFunc(u, v, target) {
-      u *= 20;
-      v *= 2 * Math.PI;
-      const f = Math.exp(u / (Math.PI * 6 * 1)) - 1;
-      const scale = 0.4;
-      let x = scale * (2 * f * Math.cos(u) * Math.cos(v / 2) * Math.cos(v / 2));
-      let y = scale * (2 * (-f) * Math.sin(u) * Math.cos(v / 2) * Math.cos(v / 2));
-      let z = scale * (4 - Math.exp(u / (options.a)) - Math.sin(v) + Math.exp(u / (Math.PI * 6 * 1)) * Math.sin(v));
-      target.set(x, y, z);
-    }
-
-    let geometry = new ParametricGeometry(parametricFunc, 100, 60);
-    geometry.rotateX(-Math.PI / 2.2);
-    geometry.rotateY(Math.PI / 8);
-
-    // Load MatCap texture
-    const textureLoader = new THREE.TextureLoader();
-    const matcapTexture = textureLoader.load('static/textures/matcaps/3.png');
-
-    // Define materials
-    const matcapMaterial = new THREE.MeshMatcapMaterial({ matcap: matcapTexture, side: THREE.DoubleSide });
-    const normalMaterial = new THREE.MeshNormalMaterial({ side: THREE.DoubleSide });
-
-    let mesh = new THREE.Mesh(geometry, matcapMaterial);
-    scene.add(mesh);
-
-    /**
-     * Sizes
-     */
-    const sizes = {
-      width: window.innerWidth,
-      height: window.innerHeight
-    };
-
-    window.addEventListener('resize', () => {
-      sizes.width = window.innerWidth;
-      sizes.height = window.innerHeight;
-      camera.aspect = sizes.width / sizes.height;
-      camera.updateProjectionMatrix();
-      renderer.setSize(sizes.width, sizes.height);
-      renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
-    });
-
-    /**
-     * Camera
-     */
-    const camera = new THREE.PerspectiveCamera(75, sizes.width / sizes.height, 0.1, 100);
-    camera.position.set(1, 1, 3);
-    scene.add(camera);
-
-    // Controls
-    const controls = new OrbitControls(camera, canvas);
-    controls.enableDamping = true;
-    controls.autoRotate = true;
-    controls.autoRotateSpeed = - 0.2;
-
-    // Add material toggle dropdown
-    gui.add(options, 'material', ['Matcap', 'Normal']).name('Style').onChange((value) => {
-      mesh.material = value === 'Matcap' ? matcapMaterial : normalMaterial;
-      mesh.material.wireframe = options.wireframe; // Keep wireframe state
-    });
-
-    // Add wireframe toggle
-    gui.add(options, 'wireframe').name('Frame').onChange((value) => {
-      mesh.material.wireframe = value;
-    });
-
-    // Add parameter
-    gui.add(options, 'a', 8, 18, 0.01).onChange(() => {
-      // Regenerate geometry with the new 'a' value
-      geometry.dispose(); // Dispose of the old geometry to free up memory
-      geometry = new ParametricGeometry(parametricFunc, 100, 60);
-      geometry.rotateX(-Math.PI / 2.2);
-      geometry.rotateY(Math.PI / 8);
-
-      // Update the mesh with the new geometry
-      mesh.geometry = geometry;
-    });
-
-    gui.close();
-
-    /**
-     * Renderer
-     */
-    const renderer = new THREE.WebGLRenderer({ canvas: canvas, antialias: true });
-    renderer.setSize(sizes.width, sizes.height);
-    renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
-
-    /**
-     * Animate
-     */
-    const tick = () => {
-      controls.update();
-      renderer.render(scene, camera);
-      window.requestAnimationFrame(tick);
-    };
-
-    tick();
-
-
   </script>
+  <script type="module" src="./js/seashellMain.js"></script>
 </body>
-
 </html>
